# ProjectEnigma

./: CMakeLists.txt  configuration.cpp  main.cpp
